# kratt

./: LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: tests.yml
kratt/: __init__.py  config.py  main.py
kratt/core/: __init__.py  hotkey_manager.py  tools.py  web_search.py  worker.py
kratt/lc/: agent.py  rag.py  tools.py
kratt/resources/: style.css
kratt/ui/: __init__.py  chat_bubble.py  main_window.py  settings_dialog.py
setup/: setup.sh
tests/: conftest.py  test_ai_logic.py  test_backend.py  test_ui.py
