[project]
name = "kratt"
version = "0.1.0"
description = "A lightweight desktop AI assistant powered by Ollama"
authors = [
    { name = "Rainer Vana" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.10.1",
    "ollama>=0.6.1",
    "pynput>=1.8.1",
    "playwright>=1.57.0",
    "ddgs>=8.1.1",
    "langchain>=1.2.8",
    "langchain-core>=1.2.8",
    "langchain-ollama>=1.0.1",
    "langchain-community>=0.4.1",
    "langchain-text-splitters==1.1.0",
    "faiss-cpu>=1.13.2"
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "pytest-qt>=4.5.0",
]

[project.scripts]
kratt = "kratt.main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --strict-markers"
markers = [
    "integration: marks tests as integration tests",
    "ui: marks tests as UI tests",
]

[tool.coverage.run]
omit = [
    "kratt/main.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
precision = 2